--- a/app/views/point_ranges/index.html.erb
+++ b/app/views/point_ranges/index.html.erb
@@ -1,4 +1,18 @@
 <%- model_class = PointRange -%>
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li><%= link_to parent.division, parent.division %><span class="divider">/</span></li>
+      <li><%= link_to t('assigned_surveys'), division_assigned_survey_path(parent.division, parent) %><span class="divider">/</span></li>
+      <li class="active"><%= t('point_ranges') %></li>
+    </ul>
+  </div>  
+  
+  <div class="span6 btn-group">
+    <%= link_to t('new_point_range'), [:new,parent,:point_range], :class => 'btn btn-primary' if can?(:create, PointRange) %>
+  </div>
+<% end %>
 <div class="page-header clearfix">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
@@ -25,9 +39,9 @@
         <td><%=l point_range.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_point_range_path(point_range), :class => 'btn btn-mini' %>
+                      [:edit,parent,point_range], :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      point_range_path(point_range),
+                      [parent,point_range],
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
@@ -36,7 +50,3 @@
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_point_range_path,
-            :class => 'btn btn-primary' %>
